@@ -2,6 +2,7 @@ from gi.repository import Gtk
 from gi.repository import Gio
 from gi.repository import GLib
 
+
 class StatusMenuButton(Gtk.MenuButton):
     css = Gtk.CssProvider()
     css.load_from_data(bytes("""
@@ -37,18 +38,27 @@ class LineColPopover(Gtk.Popover):
     def __init__(self, preferences):
         super(LineColPopover, self).__init__()
 
-        box = Gtk.Box(orientation=Gtk.Orientation.VERTICAL, border_width=10)
-        self.add(box)
+        self.box = Gtk.Box(orientation=Gtk.Orientation.VERTICAL,
+                           border_width=10)
+        self.add(self.box)
 
+        self.add_check_button(
+            'Display line numbers', "editor.line-numbers-toggle",
+            preferences.line_numbers)
+        self.add_check_button(
+            'Display right margin', "editor.right-margin-toggle",
+            preferences.line_numbers)
+
+        self.box.show_all()
+
+    def add_check_button(self, label, action, value):
         btn = Gtk.CheckButton(
-            label='Display line numbers',
-            action_name="editor.line-numbers-toggle",
+            label=label,
+            action_name=action,
             action_target=GLib.Variant('b', True))
-        btn.set_active(preferences.line_numbers)
-        box.pack_start(btn, True, True, 0)
-
-        box.show_all()
-
+        btn.set_active(value)
+        self.box.pack_start(btn, True, True, 0)
+# endclass
 
 
 class Statusbar(Gtk.Statusbar):
@@ -77,7 +87,8 @@ class Statusbar(Gtk.Statusbar):
         box = Gtk.Box(orientation=Gtk.Orientation.VERTICAL, border_width=10)
         pop.add(box)
 
-        auto_indent = Gtk.CheckButton(label="Auto indent",
+        auto_indent = Gtk.CheckButton(
+            label="Auto indent",
             action_name="editor.auto-indent-toggle",
             action_target=GLib.Variant('b', True))
         box.pack_start(auto_indent, True, True, 0)
@@ -104,7 +115,8 @@ class Statusbar(Gtk.Statusbar):
             tab_spaces_2.set_active(True)
         box.pack_start(tab_spaces_4, True, True, 0)
 
-        tab_spaces_8 = Gtk.RadioButton(label="8",
+        tab_spaces_8 = Gtk.RadioButton(
+            label="8",
             action_name="editor.tab-width",
             action_target=GLib.Variant('i', 8),
             group=tab_spaces_2)
@@ -116,7 +128,8 @@ class Statusbar(Gtk.Statusbar):
         box.pack_start(Gtk.Separator(orientation=Gtk.Orientation.HORIZONTAL),
                        True, True, 5)
 
-        self.tab_use_space = Gtk.CheckButton(label="Use spaces",
+        self.tab_use_space = Gtk.CheckButton(
+            label="Use spaces",
             action_name="editor.use-spaces-toggle",
             action_target=GLib.Variant('b', True))
         box.pack_start(self.tab_use_space, True, True, 0)
@@ -127,7 +140,7 @@ class Statusbar(Gtk.Statusbar):
     def on_tab_spaces(self, widget):
         if widget.get_active():
             self.width_btn.set_label("Tabulator width %s" %
-                                      widget.get_action_target_value())
+                                     widget.get_action_target_value())
 
     def create_editor_popover(self, preferences):
         pop = Gtk.Popover()
@@ -136,7 +149,7 @@ class Statusbar(Gtk.Statusbar):
 
         period_btn = Gtk.CheckButton(
             label='Save file each 5 min',
-            action_name="win.period-save-toggle",
+            action_name="editor.period-save-toggle",
             action_target=GLib.Variant('b', True))
         period_btn.set_active(preferences.period_save)
         box.pack_start(period_btn, True, True, 0)
