@@ -10,6 +10,7 @@ Version 1.2.0.dev0
   * preferences are save automatical
   * auto indent is switchable
   * showing line numbers is switchable
+  * right margin is switchable
 
 Version 1.1.0 - 03.08.2017 7:00
 
